# FoTClaw

./: .gitignore  LICENSE  README.md  pyproject.toml  setting.yaml
src/fot/: __init__.py  fot_client.py  fot_server.py
src/fotclaw/: __init__.py  __main__.py  cli.py  config.py  fot_client.py  fot_server.py  manager.py  models.py  openclaw_adapter.py  store.py  supervisor.py
