[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fotclaw"
version = "0.1.0"
description = "FoTClaw: multi-process OpenClaw orchestration with FoT trace aggregation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fotclaw = "fotclaw.cli:main"
fotclean = "fotclaw.cli:clean_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
